# AsterDrive

./: .dockerignore  .env.example  .gitignore  API_EXAMPLES.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  README.zh.md  build.rs  config.example.toml  docker-compose.yml  quickstart.sh
.cargo/: audit.toml
.gcop/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml  question.yml
.github/workflows/: frontend-e2e.yml  frontend.yml  performance.yml  rust-release.yml  rust.yml
api-docs-macros/src/: lib.rs
developer-docs/: README.md  architecture.md  module-designs.md  testing.md
developer-docs/api/: admin.md  auth.md  batch.md  files.md  folders.md  health.md  index.md  internal-storage.md  public.md  search.md  shares.md  tasks.md  teams.md  trash.md  webdav.md  wopi.md
docs/: architecture.md  index.md
docs/api/: admin.md  (+9 more)
frontend-panel/: .gitignore  README.md  biome.json  config.toml  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
migration/: Cargo.toml  README.md
migration/src/: legacy.rs  lib.rs  m20240101_000001_create_users_table.rs  m20240101_000002_create_files_table.rs  m20250320_000001_create_table.rs  m20250321_000001_add_storage_quota.rs  m20250321_000002_create_shares.rs  m20250321_000003_chunked_upload.rs  m20250321_000004_webdav_accounts.rs  m20250321_000005_webdav_root_folder.rs  m20250321_000006_entity_properties.rs  m20250321_000007_soft_delete.rs  m20250321_000008_add_is_locked.rs  m20250321_000009_webdav_locks.rs  m20250321_000010_file_versions.rs  m20250321_000011_resource_locks.rs  m20250321_000012_presigned_upload.rs  m20250322_000001_system_config_metadata.rs  m20250322_000002_config_source_namespace.rs  m20260322_000001_create_audit_logs.rs  m20260323_000001_add_file_size.rs  m20260324_000001_s3_multipart_upload.rs  m20260325_000001_upload_session_file_id.rs  m20260327_000001_add_share_lookup_indexes.rs  m20260327_000002_add_user_preferences.rs  m20260329_000001_create_user_profiles.rs  m20260329_000002_add_user_profile_display_name.rs  m20260329_000003_add_maintenance_indexes.rs  m20260329_000004_create_upload_session_parts.rs  m20260330_000001_add_directory_lookup_indexes.rs  m20260330_000002_add_search_name_indexes.rs  m20260331_000001_add_user_session_version.rs  m20260331_000002_create_storage_policy_groups.rs  m20260402_000001_create_teams.rs  m20260403_000001_add_team_scope_to_shares.rs  m20260408_000001_add_contact_verification_tokens.rs  m20260409_000001_create_mail_outbox.rs  m20260409_000002_drop_mail_template_text_configs.rs  m20260410_000001_create_background_tasks.rs  m20260412_000001_create_wopi_sessions.rs  (+32 more)
scripts/: monitor.sh  test.sh
src/: alloc.rs  cli.rs  errors.rs  lib.rs  main.rs  metrics.rs  types.rs
tests/: api_integration.rs  generate_openapi.rs  test_admin.rs  test_archive_preview.rs  test_audit.rs  test_auth.rs  test_azure_blob.rs  test_batch.rs  test_branding.rs  test_cache.rs  test_cli.rs  test_cors.rs  test_database_backends.rs  test_db_indexes.rs  test_directory_upload.rs  test_edit.rs  test_errors.rs  test_files.rs  test_folders.rs  test_gravatar_config.rs  test_health.rs  test_local_driver_security.rs  test_mail_services.rs  test_maintenance.rs  test_media_metadata.rs  test_mfa.rs  test_middleware.rs  test_oauth2.rs  test_oidc.rs  test_pagination.rs  test_policies.rs  test_preferences.rs  test_properties.rs  test_public_custom_config.rs  test_public_media_data_support.rs  test_public_preview_apps.rs  test_public_thumbnail_support.rs  test_refactor_contracts.rs  test_remote_enrollment.rs  test_remote_storage.rs  (+23 more)
(+1716 files in other folders)
