[package]
name = "asterdrive"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4"
actix-multipart = "0.7"
actix-cors = "0.7"
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "1.1"
migration = { path = "migration" }

# Authentication
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
bcrypt = "0.17"

# Storage
aws-sdk-s3 = "1"
aws-config = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"

# Async
async-trait = "0.1"
futures = "0.3"

# File handling
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1"


# Config
config = "0.15"

[dev-dependencies]
http-body-util = "0.1"
