[package]
name = "migration"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm-migration = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"

[[bin]]
name = "migrate"
path = "src/main.rs"

[lib]
name = "migration"
path = "src/lib.rs"
